--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"eslint-plugin-svelte": "^2.30.0",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
+		"sass": "^1.69.5",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"svelte-preprocess": "^5.1.3",
