--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,11 +5,12 @@
 		"checkJs": true,
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
+		"verbatimModuleSyntax": false,
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
-		"moduleResolution": "bundler",
+		"moduleResolution": "node",
 		"types": ["node"],
 		"typeRoots": [
 			"node_modules/@types"
