Updated project configuration: eslint (updated rules, prettier support), changed tab spacings to spaces.

--- a/.prettierignore
+++ b/.prettierignore
@@ -2,3 +2,24 @@
 pnpm-lock.yaml
 package-lock.json
 yarn.lock
+
+/.dependencygraph
+/.git
+/.history
+/.husky
+/.next
+/.storybook
+/.vscode
+/__mocks__
+/build
+/coverage
+/idea
+/i18n
+/node_modules
+/public
+/public-src
+/publish
+/types
+/utils
+
+**/*_
