--- a/.editorconfig
+++ b/.editorconfig
@@ -7,8 +7,8 @@ charset = utf-8
 indent_size = 2
 end_of_line = lf
 trim_trailing_whitespace = true
-; indent_style = space
-indent_style = tab
+indent_style = space
+; indent_style = tab
 
 [*.py]
 indent_style = space
