--- a/.eslintignore
+++ b/.eslintignore
@@ -11,3 +11,15 @@ node_modules
 pnpm-lock.yaml
 package-lock.json
 yarn.lock
+
+
+# Temp & hidden files
+/temp
+**/*_{BACKUP,BASE,LOCAL,REMOTE}_*
+**/*UNUSED
+**/*.bak
+**/*.tmp
+**/.*sw?
+**/*_
+package-lock.*
+.DS_Store
