--- a/.prettierrc.yaml
+++ b/.prettierrc.yaml
@@ -5,9 +5,8 @@ tabWidth: 2
 trailingComma: 'all'
 useTabs: false
 plugins:
-- prettier-plugin-svelte
+  - prettier-plugin-svelte
 overrides:
-- files: "*.svelte"
-  options:
-    parser: svelte
-
+  - files: '*.svelte'
+    options:
+      parser: svelte
