--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "checkJs": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    // "verbatimModuleSyntax": false,
+    // @ts-ignore
+    "verbatimModuleSyntax": false,
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "sourceMap": true,
