Added stylelint, calmed stylelint warnings.

--- a/package.json
+++ b/package.json
@@ -17,10 +17,16 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.2",
     "eslint-plugin-svelte": "^2.30.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
+    "rimraf": "^5.0.5",
     "rollup-plugin-svelte": "^7.1.6",
     "sass": "^1.69.5",
+    "stylelint": "^16.1.0",
+    "stylelint-config-recommended-scss": "^14.0.0",
+    "stylelint-config-standard": "^36.0.0",
+    "stylelint-scss": "^6.0.0",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
     "svelte-preprocess": "^5.1.3",
@@ -30,7 +36,10 @@
     "vitest": "^1.0.0"
   },
   "scripts": {
+    "stylelint": "echo --Lint styles-- && stylelint src/**/*.{css,scss,less}",
     "eslint": "echo --Lint sources-- && eslint src --ext js,ts,svelte,json",
+    "type-check": "echo --Run typescript linter-- && tsc --pretty --noEmit",
+    "check-all": "echo --Run all pre-commit check-ups-- && npm-run-all prettier stylelint eslint type-check && echo --All check-ups passed--",
     "prettier": "echo --Run prettier-- && prettier --write --cache . | grep -v '(cached)' || true",
     "start": "vite dev",
     "build": "vite build",
