--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svelte-randonneur-app",
-  "changed": "2023.12.27, 15:23",
+  "changed": "2023.12.30, 23:42",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -9,6 +9,9 @@
     "tabulator-tables": "^5.5.2"
   },
   "dependencies": {
+    "@svelteuidev/composables": "^0.15.4",
+    "@svelteuidev/core": "^0.15.4",
+    "radix-icons-svelte": "^1.2.1",
     "svelte-headless-table": "^0.17.7"
   },
   "devDependencies": {
