--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@svelteuidev/composables": "^0.15.4",
     "@svelteuidev/core": "^0.15.4",
+    "@svelteuidev/dates": "^0.15.4",
+    "dayjs": "^1.11.10",
     "radix-icons-svelte": "^1.2.1",
     "svelte-headless-table": "^0.17.7"
   },
@@ -23,6 +25,7 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "classnames": "^2.3.3",
+    "date-picker-svelte": "^2.10.1",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.2",
