Issue #5: Added tests & tests' debug support. Added test cases for basic `deriveDataSetSpec` methods. Fixed bugs in derive methods (had tested on real data samples, implemented as unit tests). In progress: string data specifications in app store for future use. TODO: Analize intermediate data records to determine lists or tables (eg, for 'categories' or 'units' data).

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -72,6 +72,22 @@
       "console": "integratedTerminal"
     },
     {
+      "name": "vitest",
+      "program": "${workspaceRoot}/node_modules/vitest/vitest.mjs",
+      "args": [
+        "run",
+        "related",
+        // Add module name below...
+        "deriveDataSetSpec"
+      ],
+      "type": "node",
+      "request": "launch",
+      "runtimeExecutable": "node",
+      // "outputCapture" : "std",
+      // "protocol": "inspector",
+      "console": "integratedTerminal"
+    },
+    {
       "name": "Python: Run file",
       "type": "python",
       "request": "launch",
