Issue #20: Added project management environment. Updated js utility scripts to project requirements (type:module, dates formatting using dayjs). First version: 0.0.1.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "svelte-randonneur-app",
-  "changed": "2023.12.30, 23:42",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "changed": "2024.01.17, 00:13",
+  "timetag": "240117-0017",
+  "timestamp": "2024.01.17, 00:17 +0700",
   "private": true,
   "type": "module",
   "unusedDependencies": {
@@ -13,6 +15,7 @@
     "@svelteuidev/core": "^0.15.4",
     "@svelteuidev/dates": "^0.15.4",
     "dayjs": "^1.11.10",
+    "dayjs-timezone-iana-plugin": "^0.1.0",
     "radix-icons-svelte": "^1.2.1",
     "svelte-headless-table": "^0.17.7"
   },
@@ -26,11 +29,13 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "classnames": "^2.3.3",
+    "date-fns-tz": "^2.0.0",
     "date-picker-svelte": "^2.10.1",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.2",
     "eslint-plugin-svelte": "^2.30.0",
+    "gulp": "^4.0.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
@@ -55,8 +60,12 @@
     "type-check": "echo --Run typescript linter-- && tsc --pretty --noEmit",
     "check-all": "echo --Run all pre-commit check-ups-- && npm-run-all prettier stylelint eslint type-check svelte-check && echo --All check-ups passed--",
     "prettier": "echo --Run prettier-- && prettier --write --cache . | grep -v '(cached)' || true",
-    "start": "vite dev",
-    "build": "vite build",
+    "start": "echo --Start dev server-- && vite dev",
+    "patch-build": "echo --Patch build-- && gulp patchBuild",
+    "svelte-build": "echo --Build static bundle-- && vite build",
+    "build": "echo --Build static bundle-- && npm-run-all svelte-build patch-build",
+    "publish": "echo --Publish build /posix commands used/-- && sh ./utils/publish.sh",
+    "build-and-publish": "echo --Build and publish-- && npm-run-all build publish",
     "preview": "vite preview",
     "svelte-check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "svelte-check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
