Issue #25: Correctly capitalize strings with 'uuid'.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -78,7 +78,7 @@
         "run",
         "related",
         // Add module name below...
-        "deriveDataSetSpec"
+        "makeTitleFromPropertyId"
       ],
       "type": "node",
       "request": "launch",
