Issue #38: Minor fixes: extracted some constatants, renamed StatsBlock to PaginationInfo, it became optional -- shows only if has number of records larger than minimal count (5), added `.htaccess` file for demo site to hide service folders like `data` and `_app`.

--- a/static/.htaccess
+++ b/static/.htaccess
@@ -1,10 +1,18 @@
 DirectoryIndex index.html
 
+Options -Indexes
+
 ErrorDocument 404 /index.html
 # ErrorDocument 403 /404.html
 
 # Remove .html extensions...
 RewriteEngine On
+
+RewriteBase /
+
 RewriteCond %{REQUEST_URI} !\.[a-zA-Z0-9]{3,4}
 RewriteCond %{REQUEST_URI} !/$
 RewriteRule ^(.*)$ $1.html
+
+RewriteRule ^data/$ / [R=301,NC,L]
+RewriteRule ^_app/$ / [R=301,NC,L]
