--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@svelteuidev/composables": "^0.15.4",
     "@svelteuidev/core": "^0.15.4",
     "@svelteuidev/dates": "^0.15.4",
+    "browser-filesaver": "^1.1.1",
     "dayjs": "^1.11.10",
     "dayjs-timezone-iana-plugin": "^0.1.0",
     "radix-icons-svelte": "^1.2.1",
